# tir103

airflow-demo/dags/: d_01_example_dag.py  d_02_example_dag_dependency.py  d_03_example_pass_parameters.py  d_04_example_dag_decorator.py  d_05_example_pass_parameters_decorator.py  d_06_example_pass_parameters_cli.py  d_07_example_data_pipeline.py  d_08_example_import_utils.py  d_09_example_notification.py  d_10_example_import_tasks.py  d_11_example_import_taskgroup.py
airflow-demo/tasks/: test_tasks.py
airflow-demo/utils/: my_notifier.py  testutils.py
data-pipeline/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Pipfile  docker-compose-mysql.yml
data-pipeline/.devcontainer/: devcontainer.json  postCreateCommand.sh
data-pipeline/res_gossiping/: [公告] 中秋連假線上烤肉兼置底聯誼閒聊區.txt  [公告] 八卦板板規(2020.07.21).txt  [公告] 多篇無關推噓文 水桶.txt  [公告] 數條板規修改草案於gossippicket討論.txt  [公告]十月份置底閒聊區      .txt  [協尋] 台北市內湖區樂群二路265巷路口 行車紀錄.txt  [協尋] 桃園交通事故，請大家幫幫忙.txt  [協尋] 瑞光路一段 民生東路 行車記錄器.txt  [問卦] 下午茶這樣100塊？.txt  (+697 more)
docker/: Dockerfile  README.md  app.py  docker-compose.yml  flask.Dockerfile
gcp/: .gitignore  01_bigquery.ipynb  02_pygheets.ipynb  03_secret_manager.ipynb  Dockerfile  app.py  custom_main.py  custom_utils.py  pyproject.toml  selenium_docker_run.sh  test_selenium.py
gcp/external_csv/: sale.csv  sale2.csv
gcp/external_jsonl/: product.jsonl
gcp/external_partition/dt=2024-05-06/: sale.csv
gcp/external_partition/dt=2024-05-07/: sale.csv
gcp/templates/: get_form_data.html
prefect-demo/: .gitignore  Dockerfile  requirements.txt
python-package-management/: Dockerfile
(+27 files in other folders)
